[package]
name = "authy-rs"
version = "0.1.0"
authors = ["Janosch Gräf <janosch.graef@cispa.saarland>"]
edition = "2018"
description = "A API client for the Twilio Authy REST API."
documentation = "https://docs.rs/authy-rs"
repository = "https://github.com/jgraef/authy-rs"
readme = "README.md"
keyword = ["authy", "twilio", "phone", "verification"]
license = "MIT"

[badges]
gitlab = { repository = "https://github.com/jgraef/authy-rs", branch = "master" }

[dependencies]
reqwest = "0.9.5"
phonenumber = "0.2.1+8.9.0"
serde = "1.0.79"
serde_json = "1.0"
serde_derive = "1.0.79"

[dev-dependencies]
dotenv = "0.13.0"